styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  outline: none;
  border: none;
  font-family: "Poppins", sans-serif;
}

html {
  font-size: 62.5%;
}

body {
  min-height: 100vh;
  width: 100%;
  background-image: url(background.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}

.bg-img {
  width: 100vh;
  height: 100vh;
}

.container {
  width: 90%;
  max-width: 1440px;
  margin: 0 auto;
}

.heading {
  color: #fff;
  text-align: center;
  font-size: 4.4rem;
  margin: 3.2rem 0;
  margin-top: 4.4rem;
}

.content {
  text-align: center;
  padding: 6.4rem 3.2rem;
  margin: 3.2rem 0 3.2rem 0;
  min-width: 90vw;
  border-radius: 2rem;
  background-color: rgba(187, 167, 233, 0.2);
  opacity: 0.75;

  display: flex;
  align-items: center;
  justify-content: center;

  flex-wrap: wrap;

  gap: 3.2rem;
}

.wrapper {
  max-width: 440px;

  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;

  opacity: 1;
}

.box {
  width: 350px;
  height: 450px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: #ffffff1a;
  backdrop-filter: blur(20px);
  padding: 1.5em;
  border-radius: 25px;
  border: 2px solid #ffffff30;
  box-shadow: 0 0 30px #0000002a;
  text-align: center;
}
.box h2 {
  color: #fff;
  text-transform: capitalize;
  margin: 15px 0;
}
.box h2 span {
  display: block;
  font-size: 15px;
  font-weight: 300;
  text-transform: capitalize;
}
.box p {
  color: #fff;
  font-size: 14px;
}
.btn-area a {
  text-decoration: none;
  color: #fff;
  background: transparent;
  display: inline-block;
  padding: 8px 15px;
  margin: 15px 5px;
  border: 2px solid rgba(255, 255, 255, 0.6);
  border-radius: 5px;
}
.btn-area a.ex {
  background: transparent;
  color: #fff;
}
.socials {
  margin-top: 20px;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  display: -o-flex;
  display: flex;
}
.socials a {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  line-height: 45px;
  color: #fff;
  margin: 0 5px;
}
.socials a.a1 {
  background: #3b5998;
}
.socials a.a2 {
  background: #55acee;
}
.socials a.a3 {
  background: #bd081c;
}
.socials a.a4 {
  background: #bc2a8d;
}
.socials i {
  font-size: 20px;
}
.profile-img {
  width: 120px;
  height: 120px;
  border-radius: 50%;
  overflow: hidden;
  object-fit: cover;
  border: 1px solid whitesmoke;
}
.profile-img img {
  width: 100%;
}

